project sneak pick

--- a/TNT.html
+++ b/TNT.html
@@ -36,6 +36,6 @@ SIGN UP FOR SCIENCE TIMES: Get stories that capture the wonders of nature, the c
 <p>
     In our own universe, it would serve as a window into the forces operating at energies forever beyond the reach of particle accelerators on Earth and yield new insights into gravity itself. Dr. Kovac’s ripples would be the first direct observation of gravitational waves, which, according to Einstein’s theory of general relativity, should ruffle space-time.
 </p>
-<p></p>
+<p>Marc Kamionkowski of Johns Hopkins University, an early-universe expert who was not part of the team, said, “This is huge, as big as it gets.”</p>
 </body>
 </html>
