changes to readme

--- a/home.html
+++ b/home.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <nav class="header">
-    <img class="menu icon" src="../svg-export/svgexport-1.svg" width="24" height="24">
-    <img class="search icon" src="../svg-export/svgexport-2.svg" width="24" height="24">
+    <img class="menu icon" src="../accessories/svg-export/svgexport-1.svg" width="24" height="24">
+    <img class="search icon" src="../accessories/svg-export/svgexport-2.svg" width="24" height="24">
     <a href="#" class="word icon">
       SPACE & COSMOS
     </a>
-    <img class="logo" src="../svg-export/svgexport-3.svg" height="36">
+    <img class="logo" src="../accessories/svg-export/svgexport-3.svg" height="36">
     <button type="button">SUBSCRIBE NOW</button>
     <button type="button">LOG IN</button>
 </nav>
@@ -22,12 +22,12 @@
     <h2>Space Ripples Reveal Big Bang's Smoking Gun</h2>
     <hr class="hr-margin"><br>
         <nav>
-            <img src="../svg-export/svgexport-7.svg">
-            <img src="../svg-export/svgexport-8.svg">
-            <img src="../svg-export/svgexport-9.svg">
-            <img src="../svg-export/svgexport-10.svg">
-            <img src="../svg-export/svgexport-11.svg">
-            <img src="../svg-export/svgexport-12.svg">
+            <img src="../accessories/svg-export/svgexport-7.svg">
+            <img src="../accessories/svg-export/svgexport-8.svg">
+            <img src="../accessories/svg-export/svgexport-9.svg">
+            <img src="../accessories/svg-export/svgexport-10.svg">
+            <img src="../accessories/svg-export/svgexport-11.svg">
+            <img src="../accessories/svg-export/svgexport-12.svg">
         </nav>
     <figure>
       <img src="https://bit.ly/3vS81LD" class="title-img">
@@ -101,10 +101,10 @@
         Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.
       </p>
       <div class="eight-pics-diagram">
-        <img src="../inf_img/inflation-1.png" class="pics">
-        <img src="../inf_img/inflation-2.png" class="pics">
-        <img src="../inf_img/inflation-3.png" class="pics">
-        <img src="../inf_img/inflation-4.png" class="pics">
+        <img src="../accessories/inf_img/inflation-1.png" class="pics">
+        <img src="../accessories/inf_img/inflation-2.png" class="pics">
+        <img src="../accessories/inf_img/inflation-3.png" class="pics">
+        <img src="../accessories/inf_img/inflation-4.png" class="pics">
         <div class="pics">
           <p class="eight-pics-words">
             <span class="eight-pics-words-bold">THE UNIVERSE</span>
@@ -129,10 +129,10 @@
             Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.
           </p>
         </div>
-        <img src="../inf_img/inflation-5.png" class="pics">
-        <img src="../inf_img/inflation-6.png" class="pics">
-        <img src="../inf_img/inflation-7.png" class="pics">
-        <img src="../inf_img/inflation-8.png" class="pics">
+        <img src="../accessories/inf_img/inflation-5.png" class="pics">
+        <img src="../accessories/inf_img/inflation-6.png" class="pics">
+        <img src="../accessories/inf_img/inflation-7.png" class="pics">
+        <img src="../accessories/inf_img/inflation-8.png" class="pics">
         <div>
           <p class="eight-pics-words">
             <span class="eight-pics-words-bold">STILL NOT ENOUGH TIME</span>
@@ -315,18 +315,18 @@
       </li>
       <li class="icons">
         <nav>
-            <img src="../svg-export/svgexport-7.svg">
-            <img src="../svg-export/svgexport-8.svg">
-            <img src="../svg-export/svgexport-9.svg">
-            <img src="../svg-export/svgexport-10.svg">
-            <img src="../svg-export/svgexport-11.svg">
+            <img src="../accessories/svg-export/svgexport-7.svg">
+            <img src="../accessories/svg-export/svgexport-8.svg">
+            <img src="../accessories/svg-export/svgexport-9.svg">
+            <img src="../accessories/svg-export/svgexport-10.svg">
+            <img src="../accessories/svg-export/svgexport-11.svg">
         </nav>
       </li>
     </ul>
   </div>
 
   <nav class="main-nav">
-    <img src="../svg-export/svgexport-3.svg" width="185px">
+    <img src="../accessories/svg-export/svgexport-3.svg" width="185px">
     <div class="nav-grid">
       <div class="nav-news">
         <div class="nav-items-bold">NEWS</div>
