few changes made

--- a/home.html
+++ b/home.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="home.css" />
-  </head>
   <title>Space Ripples Reveal Big Bang’s Smoking Gun - The New York Times</title>
 </head>
 <body>
   <nav class="header">
-    <img class="menu icon" src="../accessories/svg-export/svgexport-1.svg" width="24" height="24">
-    <img class="search icon" src="../accessories/svg-export/svgexport-2.svg" width="24" height="24">
+    <img class="menu icon" src="../accessories/svg-export/svgexport-1.svg" alt="svg1" width="24" height="24">
+    <img class="search icon" src="../accessories/svg-export/svgexport-2.svg" alt="svg2" width="24" height="24">
     <a href="#" class="word icon">
       SPACE & COSMOS
     </a>
-    <img class="logo" src="../accessories/svg-export/svgexport-3.svg" height="36">
+    <img class="logo" src="../accessories/svg-export/svgexport-3.svg" alt="svg3" height="36">
     <button type="button">SUBSCRIBE NOW</button>
     <button type="button">LOG IN</button>
 </nav>
@@ -22,15 +21,15 @@
     <h2>Space Ripples Reveal Big Bang's Smoking Gun</h2>
     <hr class="hr-margin"><br>
         <nav>
-            <img src="../accessories/svg-export/svgexport-7.svg">
-            <img src="../accessories/svg-export/svgexport-8.svg">
-            <img src="../accessories/svg-export/svgexport-9.svg">
-            <img src="../accessories/svg-export/svgexport-10.svg">
-            <img src="../accessories/svg-export/svgexport-11.svg">
-            <img src="../accessories/svg-export/svgexport-12.svg">
+            <img src="../accessories/svg-export/svgexport-7.svg" alt="svg7">
+            <img src="../accessories/svg-export/svgexport-8.svg" alt="svg8">
+            <img src="../accessories/svg-export/svgexport-9.svg" alt="svg9">
+            <img src="../accessories/svg-export/svgexport-10.svg" alt="svg10">
+            <img src="../accessories/svg-export/svgexport-11.svg" alt="svg11">
+            <img src="../accessories/svg-export/svgexport-12.svg" alt="svg12">
         </nav>
     <figure>
-      <img src="https://bit.ly/3vS81LD" class="title-img">
+      <img src="https://bit.ly/3vS81LD" alt="Alan Guth" class="title-img">
       <figcaption>
           Alan Guth was one of the first physicists to hypothesize the existence of inflation,
           which explains how the universe expanded so uniformly and so quickly in the instant
@@ -101,10 +100,10 @@
         Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.
       </p>
       <div class="eight-pics-diagram">
-        <img src="../accessories/inf_img/inflation-1.png" class="pics">
-        <img src="../accessories/inf_img/inflation-2.png" class="pics">
-        <img src="../accessories/inf_img/inflation-3.png" class="pics">
-        <img src="../accessories/inf_img/inflation-4.png" class="pics">
+        <img src="../accessories/inf_img/inflation-1.png" alt="inf1" class="pics">
+        <img src="../accessories/inf_img/inflation-2.png" alt="inf2" class="pics">
+        <img src="../accessories/inf_img/inflation-3.png" alt="inf3" class="pics">
+        <img src="../accessories/inf_img/inflation-4.png" alt="inf4" class="pics">
         <div class="pics">
           <p class="eight-pics-words">
             <span class="eight-pics-words-bold">THE UNIVERSE</span>
@@ -129,10 +128,10 @@
             Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.
           </p>
         </div>
-        <img src="../accessories/inf_img/inflation-5.png" class="pics">
-        <img src="../accessories/inf_img/inflation-6.png" class="pics">
-        <img src="../accessories/inf_img/inflation-7.png" class="pics">
-        <img src="../accessories/inf_img/inflation-8.png" class="pics">
+        <img src="../accessories/inf_img/inflation-5.png" alt="inf5" class="pics">
+        <img src="../accessories/inf_img/inflation-6.png" alt="inf6" class="pics">
+        <img src="../accessories/inf_img/inflation-7.png" alt="inf7" class="pics">
+        <img src="../accessories/inf_img/inflation-8.png" alt="inf8" class="pics">
         <div>
           <p class="eight-pics-words">
             <span class="eight-pics-words-bold">STILL NOT ENOUGH TIME</span>
@@ -186,7 +185,7 @@
       </p>
 
       <figure>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="frm" src="https://www.youtube.com/embed/ZlfIVEy_YOA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <figcaption>
           Stanford Professor Andrei Linde celebrates physics breakthrough
           <span class="credit">Video by Stanford University</span>
@@ -237,7 +236,7 @@
       </p>
 
       <figure>
-        <img src="https://bit.ly/3tWCh62" width="100%">
+        <img src="https://bit.ly/3tWCh62" alt="img2" class="wid">
         <figcaption>
           The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.
           <span class="credit">Steffen Richter/Associated Press</span>
@@ -311,22 +310,22 @@
   <div class="identity">
     <ul class="social-media">
       <li class="date">
-        <button>Read Comments</button>
+        <button type="button">Read Comments</button>
       </li>
       <li class="icons">
         <nav>
-            <img src="../accessories/svg-export/svgexport-7.svg">
-            <img src="../accessories/svg-export/svgexport-8.svg">
-            <img src="../accessories/svg-export/svgexport-9.svg">
-            <img src="../accessories/svg-export/svgexport-10.svg">
-            <img src="../accessories/svg-export/svgexport-11.svg">
+            <img src="../accessories/svg-export/svgexport-7.svg" alt="svg7">
+            <img src="../accessories/svg-export/svgexport-8.svg" alt="svg8">
+            <img src="../accessories/svg-export/svgexport-9.svg" alt="svg9">
+            <img src="../accessories/svg-export/svgexport-10.svg" alt="svg10">
+            <img src="../accessories/svg-export/svgexport-11.svg" alt="svg11">
         </nav>
       </li>
     </ul>
   </div>
 
   <nav class="main-nav">
-    <img src="../accessories/svg-export/svgexport-3.svg" width="185px">
+    <img src="../accessories/svg-export/svgexport-3.svg" alt="svg3" class="logo">
     <div class="nav-grid">
       <div class="nav-news">
         <div class="nav-items-bold">NEWS</div>
