worked on few points

--- a/index 2.html
+++ b/index 2.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="home.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/chomsky" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <title>Space Ripples Reveal Big Bang’s Smoking Gun - The New York Times</title>
 </head>
 <body>
   <nav class="header">
-    <img class="menu icon" src="../accessories/svg-export/svgexport-1.svg" alt="svg1" width="24" height="24">
-    <img class="search icon" src="../accessories/svg-export/svgexport-2.svg" alt="svg2" width="24" height="24">
+    <img class="menu icon" src="accessories/svg-export/svgexport-1.svg" alt="svg1" width="24" height="24">
+    <img class="search icon" src="accessories/svg-export/svgexport-2.svg" alt="svg2" width="24" height="24">
     <a href="#" class="word icon">
       SPACE & COSMOS
     </a>
-    <img class="logo" src="../accessories/svg-export/svgexport-3.svg" alt="svg3" height="36">
+    <img class="logo" src="accessories/svg-export/svgexport-3.svg" alt="svg3" height="36">
     <button type="button">SUBSCRIBE NOW</button>
     <button type="button">LOG IN</button>
 </nav>
@@ -21,15 +25,15 @@
     <h2>Space Ripples Reveal Big Bang's Smoking Gun</h2>
     <hr class="hr-margin"><br>
         <nav>
-            <img src="../accessories/svg-export/svgexport-7.svg" alt="svg7">
-            <img src="../accessories/svg-export/svgexport-8.svg" alt="svg8">
-            <img src="../accessories/svg-export/svgexport-9.svg" alt="svg9">
-            <img src="../accessories/svg-export/svgexport-10.svg" alt="svg10">
-            <img src="../accessories/svg-export/svgexport-11.svg" alt="svg11">
-            <img src="../accessories/svg-export/svgexport-12.svg" alt="svg12">
+            <img src="accessories/svg-export/svgexport-7.svg" alt="svg7">
+            <img src="accessories/svg-export/svgexport-8.svg" alt="svg8">
+            <img src="accessories/svg-export/svgexport-9.svg" alt="svg9">
+            <img src="accessories/svg-export/svgexport-10.svg" alt="svg10">
+            <img src="accessories/svg-export/svgexport-11.svg" alt="svg11">
+            <img src="accessories/svg-export/svgexport-12.svg" alt="svg12">
         </nav>
     <figure>
-      <img src="https://bit.ly/3vS81LD" alt="Alan Guth" class="title-img">
+      <img src="accessories/Image/alan.jpeg" alt="Alan Guth" class="title-img">
       <figcaption>
           Alan Guth was one of the first physicists to hypothesize the existence of inflation,
           which explains how the universe expanded so uniformly and so quickly in the instant
@@ -93,6 +97,26 @@
         Dr. Kovac and his collaborators, working in an experiment known as Bicep, for Background Imaging of Cosmic Extragalactic Polarization, reported their results in a scientific briefing at the Center for Astrophysics here on Monday and in a set of papers submitted to The Astrophysical Journal.
       </p>
     </div>
+    <aside>
+      <div class="aside-wrapper">
+          <h4>Editors' Pick</h4>
+          <hr>
+          <a href="#" class="pick-link">
+              <img src="accessories/Image/9.jpeg" alt="Winter pic">
+              <div class="pick">After 19 Years in Hawaii, They Were Missing Something: Winter</div>
+
+          </a>
+          <a href="#" class="pick-link">
+              <img src="accessories/Image/10.jpeg" alt="Robert Capa Photo">
+              <div class="pick">Famous Robert Capa Photo Brings New Life to a Tenement and Its
+                  Residents</div>
+          </a>
+          <a href="#" class="pick-link">
+              <img src="accessories/Image/11.jpeg" alt="Flying this summer">
+              <div class="pick">5 Things We Know About Flying This Summer</div>
+          </a>
+      </div>
+  </aside>
 
     <div class="img2">
       <h4>The Theory of Inflation</h4>
@@ -100,10 +124,10 @@
         Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.
       </p>
       <div class="eight-pics-diagram">
-        <img src="../accessories/inf_img/inflation-1.png" alt="inf1" class="pics">
-        <img src="../accessories/inf_img/inflation-2.png" alt="inf2" class="pics">
-        <img src="../accessories/inf_img/inflation-3.png" alt="inf3" class="pics">
-        <img src="../accessories/inf_img/inflation-4.png" alt="inf4" class="pics">
+        <img src="accessories/inf_img/inflation-1.png" alt="inf1" class="pics">
+        <img src="accessories/inf_img/inflation-2.png" alt="inf2" class="pics">
+        <img src="accessories/inf_img/inflation-3.png" alt="inf3" class="pics">
+        <img src="accessories/inf_img/inflation-4.png" alt="inf4" class="pics">
         <div class="pics">
           <p class="eight-pics-words">
             <span class="eight-pics-words-bold">THE UNIVERSE</span>
@@ -128,10 +152,10 @@
             Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.
           </p>
         </div>
-        <img src="../accessories/inf_img/inflation-5.png" alt="inf5" class="pics">
-        <img src="../accessories/inf_img/inflation-6.png" alt="inf6" class="pics">
-        <img src="../accessories/inf_img/inflation-7.png" alt="inf7" class="pics">
-        <img src="../accessories/inf_img/inflation-8.png" alt="inf8" class="pics">
+        <img src="accessories/inf_img/inflation-5.png" alt="inf5" class="pics">
+        <img src="accessories/inf_img/inflation-6.png" alt="inf6" class="pics">
+        <img src="accessories/inf_img/inflation-7.png" alt="inf7" class="pics">
+        <img src="accessories/inf_img/inflation-8.png" alt="inf8" class="pics">
         <div>
           <p class="eight-pics-words">
             <span class="eight-pics-words-bold">STILL NOT ENOUGH TIME</span>
@@ -314,18 +338,210 @@
       </li>
       <li class="icons">
         <nav>
-            <img src="../accessories/svg-export/svgexport-7.svg" alt="svg7">
-            <img src="../accessories/svg-export/svgexport-8.svg" alt="svg8">
-            <img src="../accessories/svg-export/svgexport-9.svg" alt="svg9">
-            <img src="../accessories/svg-export/svgexport-10.svg" alt="svg10">
-            <img src="../accessories/svg-export/svgexport-11.svg" alt="svg11">
+            <img src="accessories/svg-export/svgexport-7.svg" alt="svg7">
+            <img src="accessories/svg-export/svgexport-8.svg" alt="svg8">
+            <img src="accessories/svg-export/svgexport-9.svg" alt="svg9">
+            <img src="accessories/svg-export/svgexport-10.svg" alt="svg10">
+            <img src="accessories/svg-export/svgexport-11.svg" alt="svg11">
         </nav>
       </li>
     </ul>
   </div>
-
-  <nav class="main-nav">
-    <img src="../accessories/svg-export/svgexport-3.svg" alt="svg3" class="logo">
+  <div class="wrapper">
+    <div class="recirculation">
+        <div class="more-space-astronomy">
+            <div class="more-head">
+                <div>More in Space and Astronomy</div>
+            </div>
+            <div class="flex-div">
+                <div>
+                    <div class="rec-container">
+                        <div class="rec-image">
+                            <img src="accessories/Image/1.jpeg" alt="rec-image">
+                        </div>
+                        <div class="caption-wrapper">
+                            <div class="rec-caption">
+                                Jeff J Mitchell/Getty Images
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-title">
+                        NASA's Last Rocket
+                        <div>March 24</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="rec-container">
+                        <div class="rec-image">
+                            <img src="accessories/Image/2.jpeg" alt="rec-image">
+                        </div>
+                        <div class="caption-wrapper">
+                            <div class="rec-caption">
+                                Jeff J Mitchell/Getty Images
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-title">
+                        First AI Sent To Mars Decides By Itself Not Back to Earth
+                        <div>March 23</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="rec-container">
+                        <div class="rec-image">
+                        </div>
+                        <div class="caption-wrapper">
+                            <div class="rec-caption">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-title">
+                    </div>
+                </div>
+                <div>
+                    <div class="rec-container">
+                        <div class="rec-image">
+                            <img src="accessories/Image/3.jpeg" alt="rec-image">
+                        </div>
+                        <div class="caption-wrapper">
+                            <div class="rec-caption">
+                                Jeff J Mitchell/Getty Images
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-title">
+                        NASA's Last Rocket
+                        <div>March 19</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="rec-container">
+                        <div class="rec-image">
+                            <img src="accessories/Image/4.jpeg" alt="rec-image">
+                        </div>
+                        <div class="caption-wrapper">
+                            <div class="rec-caption">
+                                Jeff J Mitchell/Getty Images
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-title">
+                        The Water on Mars Vanished. This Might Be Where It Went.
+                        <div>March 23</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="rec-container">
+                        <div class="rec-image">
+                            <img src="accessories/Image/5.jpeg" alt="rec-image">
+                        </div>
+                        <div class="caption-wrapper">
+                            <div class="rec-caption">
+                                Jeff J Mitchell/Getty Images
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-title">
+                        NASA's Last Rocket
+                        <div>March 23</div>
+                    </div>
+                </div>
+            </div>
+            <div class="more-space-astronomy">
+                <div class="more-head">
+                    <div>Editor's Picks</div>
+                </div>
+            </div>
+            <div class="flex-div">
+                <div>
+                    <div class="rec-container">
+                        <div class="rec-image">
+                            <img src="accessories/Image/6.jpeg" alt="rec-image">
+                        </div>
+                        <div class="caption-wrapper">
+                            <div class="rec-caption">
+                                Jeff J Mitchell/Getty Images
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-title">
+                        NASA's Last Rocket
+                        <div>March 23</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="rec-container">
+                        <div class="rec-image">
+                            <img src="accessories/Image/7.jpeg" alt="rec-image">
+                        </div>
+                        <div class="caption-wrapper">
+                            <div class="rec-caption">
+                                Jeff J Mitchell/Getty Images
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-title">
+                        NASA's Last Rocket
+                        <div>6h ago</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="rec-container">
+                        <div class="rec-image">
+                            <img src="accessories/Image/8.jpeg" alt="rec-image">
+                        </div>
+                        <div class="caption-wrapper">
+                            <div class="rec-caption">
+                                Jeff J Mitchell/Getty Images
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-title">
+                        NASA's Last Rocket
+                        <div>March 24</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="popular">
+            <div class="more-head">
+                <div>Most popular</div>
+            </div>
+            <div class="popular-section">
+                <a href="#" class="link">TA Man Demanded His Final Paycheck. The Auto Shop Delivered 91,500 Greasy Pennies.</a>
+            </div>
+            <div class="popular-section">
+                <a href="#" class="link">These Lemony Pudding Cakes Are Magic in a Ramekin</a>
+            </div>
+            <div class="popular-section">
+                <a href="#" class="link">JThe Brooch Is Back, Baby</a>
+            </div>
+            <div class="popular-section">
+                <a href="#" class="link">Woman Is Fatally Stabbed by Her Son During Video Call, Authorities Say</a>
+            </div>
+            <div class="popular-section">
+                <a href="#" class="link">Beige on an S.U.V. Will Cost You, but for Pickups It’s Golden</a>
+            </div>
+            <div class="popular-section">
+                <a href="#" class="link">Julie Pomagalski, Former Olympic Snowboarder, Is Killed in an Avalanche</a>
+            </div>
+            <div class="popular-section">
+                <a href="#" class="link">‘I Cry on Tuesdays and Fridays’</a>
+            </div>
+            <div class="popular-section">
+                <a href="#" class="link">Welcome to Paradise. You May Want to Catch the Next Flight Home.</a>
+            </div>
+            <div class="popular-section">
+              <a href="#" class="link">Sam’s Club C.E.O. on the Company’s High Sales and Low Wages</a>
+          </div>
+          <div class="popular-section">
+            <a href="#" class="link">Evils Lurking Beneath a City’s Centuries-Old Canals</a>
+        </div>
+        </div>
+    </div>
+</div>
+  <nav class="main-nav"><br>
+    <img src="accessories/svg-export/svgexport-3.svg" alt="svg3" class="logo">
     <div class="nav-grid">
       <div class="nav-news">
         <div class="nav-items-bold">NEWS</div>
@@ -519,19 +735,15 @@
       <div class="nav-subscribe">
         <div class="nav-items-bold">SUBSCRIBE</div>
         <div class="nav-items-bold">
-          <i class="far fa-newspaper"></i>
           <a href="">Home Delivery</a>
         </div>
         <div class="nav-items-bold">
-          <i class="fab fa-telegram-plane"></i>
           <a href="">Digital Subscriptions</a>
         </div>
         <div class="nav-items-bold">
-          <i class="fas fa-cubes"></i>
           <a href="">Games</a>
         </div>
         <div class="nav-items-bold">
-          <i class="fas fa-utensils"></i>
           <a href="">Cooking</a>
         </div>
         <div class="nav-items">
