--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <h2>Space Ripples Reveal Big Bang's Smoking Gun</h2>
     <hr class="hr-margin"><br>
         <nav>
-          <div class="icons mar">
+          <div class="icons">
             <i class="fa fa-facebook"></i>
             <i class="fa fa-whatsapp"></i>
             <i class="fa fa-twitter"></i>
             <i class="fa fa-envelope"></i>
             <i class="fa fa-share"></i>
             <img src="accessories/svg-export/svgexport-12.svg" alt="svg12">
-          </div>
+            </div>
         </nav>
     <figure>
       <img src="accessories/Image/alan.jpeg" alt="Alan Guth" class="title-img">
