--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>Space Ripples Reveal Big Bang’s Smoking Gun - The New York Times</title>
 </head>
 <body>
+  
   <nav class="header">
     <img class="menu icon" src="accessories/svg-export/svgexport-1.svg" alt="svg1" width="24" height="24">
     <img class="search icon" src="accessories/svg-export/svgexport-2.svg" alt="svg2" width="24" height="24">
@@ -25,12 +26,14 @@
     <h2>Space Ripples Reveal Big Bang's Smoking Gun</h2>
     <hr class="hr-margin"><br>
         <nav>
-            <img src="accessories/svg-export/svgexport-7.svg" alt="svg7">
-            <img src="accessories/svg-export/svgexport-8.svg" alt="svg8">
-            <img src="accessories/svg-export/svgexport-9.svg" alt="svg9">
-            <img src="accessories/svg-export/svgexport-10.svg" alt="svg10">
-            <img src="accessories/svg-export/svgexport-11.svg" alt="svg11">
+          <div class="icons">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-whatsapp"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-envelope"></i>
+            <i class="fa fa-share"></i>
             <img src="accessories/svg-export/svgexport-12.svg" alt="svg12">
+            </div>
         </nav>
     <figure>
       <img src="accessories/Image/alan.jpeg" alt="Alan Guth" class="title-img">
@@ -323,7 +326,7 @@
           with a
           bottle
           of Champagne</a> to tell him the news.</p>
-  <figure>
+  <figure class="cen">
       <iframe src="https://www.youtube.com/embed/ZlfIVEy_YOA" title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
@@ -973,6 +976,21 @@
       </div>
     </div>
   </nav>
-
+  <nav class="sub-nav">
+    <div class="subscription"><strong>Subscribe for $0.25 a week. </strong>Ends soon.</div>
+    <div class="exp-button">EXPAND <svg width="16" height="16" viewBox="0 0 9 16" version="1.1"
+            class="css-8xcdch">
+            <g id="Canvas" transform="translate(-8250 -1500)">
+                <g id="Vector">
+                    <use xlink:href="#path0_stroke" transform="translate(8251 1501.5)" fill="#111"></use>
+                </g>
+            </g>
+            <defs>
+                <path id="path0_stroke"
+                    d="M 6.5 6.5L 7.20711 7.20711L 7.91421 6.5L 7.20711 5.79289L 6.5 6.5ZM -0.707107 0.707107L 5.79289 7.20711L 7.20711 5.79289L 0.707107 -0.707107L -0.707107 0.707107ZM 5.79289 5.79289L -0.707107 12.2929L 0.707107 13.7071L 7.20711 7.20711L 5.79289 5.79289Z">
+                </path>
+            </defs>
+        </svg></div>
+</nav>
 </body>
 </html>
